--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       </div>
       <div class="cardInside">
         <h6 class="back">HAPPY BIRTHDAY!</h6>
-        <p contenteditable="true">Surpriseee! Happy birthday, love. You are the best gift from God I received last year,
+        <p contenteditable="true">Happy birthday, love. You are the best gift from God I received last year,
           and I plan to
           cherish you forever. I love every 'hmph 😤,' 'haaa 😮,' and 'hihi 😁' of yours. I am waiting for your 'Aji ki
           hol jana naaa' every single day, and I am willing to listen to every bit of it! I am desperately waiting for
